# prefecto

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  LICENSE  Makefile  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build-publish.yml  publish-docs.yml  publish-package.yml  pytest.yml  release.yml  static-analysis.yml  tests.yml
batch_task/: index.html
blocks/: index.html
concurrency/: index.html
concurrency/batch_task/: index.html
concurrency/kill_switch/: index.html
docs/: batch_task.md  blocks.md  concurrency.md  filesystems.md  index.md  license.md  logging.md
docs/concurrency/: batch_task.md  kill_switch.md
docs/serializers/: extended_serializer.md  functions.md  method.md  pandas.md  polars.md  serialization.md
docs/serializers/pandas/: methods.md  pandas_serializer.md
docs/serializers/polars/: methods.md  polars_serializer.md
docs/testing/: s3.md
filesystems/: index.html
license/: index.html
logging/: index.html
search/: search_index.json
serializers/extended_serializer/: index.html
serializers/functions/: index.html
serializers/method/: index.html
serializers/pandas/: index.html
serializers/pandas/methods/: index.html
serializers/pandas/pandas_serializer/: index.html
serializers/polars/: index.html
serializers/polars/methods/: index.html
serializers/polars/polars_serializer/: index.html
serializers/serialization/: index.html
src/prefecto/: _version.py  blocks.py  concurrency.py  filesystems.py  logging.py  states.py
src/prefecto/concurrency/: __init__.py  batch_task.py  kill_switch.py
src/prefecto/serializers/: __init__.py  core.py  pandas.py  polars.py
src/prefecto/testing/: s3.py
src/prefecto/testing/fixtures/: s3.py
testing/s3/: index.html
tests/: conftest.py  test_blocks.py  test_concurrency.py  test_filesystems.py  test_logging.py  test_serializers.py
tests/concurrency/: test_batch_task.py  test_kill_switch.py
tests/serializers/: test_core.py  test_pandas.py  test_polars.py
tests/testing/: test_s3.py
tests/testing/fixtures/: test_s3.py
