[build-system]
requires = ["setuptools", "versioneer[toml]", "toml"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.interrogate]
ignore-init-module-imports = true
ignore-init-module = true
ignore-init-method = true
fail-under = 95
exclude = ["setup.py"]

[tool.isort]
profile = "black"
line_length = 88
