[build-system]
requires = ["setuptools", "versioneer[toml]", "toml"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.interrogate]
ignore-init-module-imports = true
ignore-init-module = true
ignore-init-method = true
fail-under = 95
exclude = ["setup.py", "versioneer.py", "src/prefecto/_version.py"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["setup.py", "versioneer.py", "src/prefecto/_version.py", "src/prefecto/__init__.py"]

[tool.black]
line-length = 88
extend-exclude = ["setup.py", "versioneer.py", "src/prefecto/_version.py"]
